README: Updated section on --release